# food-personal-assistant

./: .env.example  .gitignore  Makefile  PLAN.md  pyproject.toml
.claude/skills/git-commit/: SKILL.MD
data/: taco_foods.json
docs/superpowers/plans/: 2026-05-12-week1-foundation-cli-chatbot.md  PROGRESS.md
docs/superpowers/specs/: 2026-05-12-nutrition-assistant-design.md
scripts/: seed_food_db.py
src/core/: config.py  llm.py
src/db/: engine.py  models.py
src/vectorstore/: embeddings.py  store.py
tests/: conftest.py
tests/test_db/: test_models.py
tests/test_vectorstore/: test_store.py
